<resources>

    <string name="app_name">WeatherApp</string>
    <string name="show_current_weather">Show current weather</string>
    <string name="search_place">Search Place</string>
    <string name="city_name">City Name</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="empty_text">list is empty, enter a place nam</string>
    <string name="empty_input_place_text">Place</string>
    <string name="enter_place">list is empty, enter a place name</string>
    <string name="authorization_error">Authorization error</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Ok</string>
    <string name="message_text">Failure, repeat ?</string>

    <string-array name="my_facebook_permission">
        <item>public_profile</item>
        <item>email</item>
        <item>user_birthday</item>
        <item>user_friends</item>
    </string-array>

    <string name="lat">lat</string>
    <string name="lon">lon</string>
    <string name="weather_forecast_for_day">Weather forecast for the day</string>
    <string name="weekday">Weekday</string>
    <string name="server_client_id">283949655888-o71fcj042ohfrvsgh6i33b4nsfkvp3mg.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1966327863644048</string>
    <string name="fb_login_protocol_scheme">fb1966327863644048</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="key_for_token_in_sp_facebook">key_for_token_in_sp_facebook</string>


    <string name="action_settings">Settings</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="weather">Show Weather</string>
    <string name="shared_weather">Shared Weather</string>
    <string name="log_in_width_facebook">Log in width Facebook</string>
    <string name="log_in_width_google">Log in width Google</string>

    <string name="google_auth_token">google_auth_token</string>
    <string name="facebook_auth_token">facebook_auth_token</string>



</resources>
